export const snapshot = {};

snapshot[`planner 1`] = `
[
  {
    id: "one",
    node: "one",
    path: [
      "one",
    ],
    type: {
      title: "root_one_fn",
      type: "function",
    },
  },
  {
    id: "one.id",
    node: "id",
    path: [
      "one",
      "id",
    ],
    type: {
      format: "uuid",
      title: "root_one_fn_output_id_string_uuid",
      type: "string",
    },
  },
  {
    id: "one.email",
    node: "email",
    path: [
      "one",
      "email",
    ],
    type: {
      format: "email",
      title: "string_email_1b9c2",
      type: "string",
    },
  },
  {
    id: "one.nested",
    node: "nested",
    path: [
      "one",
      "nested",
    ],
    type: {
      title: "root_one_fn_output_nested_struct",
      type: "object",
    },
  },
  {
    id: "one.nested.first",
    node: "first",
    path: [
      "one",
      "nested",
      "first",
    ],
    type: {
      title: "string_cbe33",
      type: "string",
    },
  },
  {
    id: "one.nested.second",
    node: "second",
    path: [
      "one",
      "nested",
      "second",
    ],
    type: {
      title: "root_one_fn_output_nested_struct_second_root_one_fn_output_nested_struct_second_float_list",
      type: "list",
    },
  },
  {
    id: "one.nested.third",
    node: "third",
    path: [
      "one",
      "nested",
      "third",
    ],
    type: {
      title: "root_one_fn_output_nested_struct_third_root_one_fn_output_nested_struct_third_boolean_optional",
      type: "optional",
    },
  },
]
`;

snapshot[`planner 2`] = `
{
  "<root>": [
    {
      canonFieldName: "one",
      indices: [
        0,
      ],
    },
    {
      canonFieldName: "two",
      indices: [
        0,
      ],
    },
    {
      canonFieldName: "three",
      indices: [
        0,
      ],
    },
  ],
  "one.email": [],
  "one.id": [],
  "one.nested": [
    {
      canonFieldName: "first",
      indices: [],
    },
    {
      canonFieldName: "second",
      indices: [],
    },
    {
      canonFieldName: "third",
      indices: [],
    },
  ],
  "one.nested.first": [],
  "one.nested.second": [],
  "one.nested.third": [],
  one: [
    {
      canonFieldName: "id",
      indices: [],
    },
    {
      canonFieldName: "email",
      indices: [],
    },
    {
      canonFieldName: "nested",
      indices: [],
    },
    {
      canonFieldName: "union1",
      indices: [],
    },
    {
      canonFieldName: "union2",
      indices: [],
    },
    {
      canonFieldName: "from_union1",
      indices: [],
    },
    {
      canonFieldName: "from_union2",
      indices: [],
    },
  ],
}
`;

snapshot[`planner 3`] = `
[
  "one  one  one  object  root_one_fn_output  false",
  "one.union1  union1  one/union1  union  union_aa854  false",
  "one.union2  union2  one/union2  union  union_2f7ce  false",
  "one.union2\$A.a  a  one/union2\$A/a  integer  integer_6d74d  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  B_b_either  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  integer_6d74d  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  string_cbe33  false",
]
`;

snapshot[`planner 4`] = `
[
  "one  one  one  object  root_one_fn_output  false",
  "one.union2  union2  one/union2  union  union_2f7ce  true",
  "one.union2\$A.a  a  one/union2\$A/a  integer  integer_6d74d  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  B_b_either  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  integer_6d74d  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  string_cbe33  false",
  "one.from_union2  from_union2  one/from_union2  integer  integer_6d74d  false",
  "one.union1  union1  one/union1  union  union_aa854  true",
  "one.from_union1  from_union1  one/from_union1  integer  integer_6d74d  false",
]
`;

snapshot[`planner: dependencies 1`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  integer_6d74d  false",
  "two.email  email  two/email  string  string_email_1b9c2  false",
]
`;

snapshot[`planner: dependencies 2`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  integer_6d74d  false",
  "two.email  email  two/email  string  string_email_1b9c2  false",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_cbe33  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_cbe33  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_cbe33  false",
]
`;

snapshot[`planner: dependencies 3`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  integer_6d74d  false",
  "two.email  email  two/email  string  string_email_1b9c2  false",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_cbe33  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_cbe33  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_cbe33  false",
]
`;

snapshot[`planner: dependencies 4`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.email  email  two/email  string  string_email_1b9c2  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_cbe33  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_cbe33  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_cbe33  false",
  "two.id  id  two/id  integer  integer_6d74d  false",
]
`;

snapshot[`planner: dependencies 5`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.email  email  two/email  string  string_email_1b9c2  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_cbe33  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_cbe33  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_cbe33  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_cbe33  false",
]
`;

snapshot[`planner: dependencies 6`] = `
[
  "two  two  two  object  root_two_fn_output  false",
  "two.id  id  two/id  integer  integer_6d74d  false",
  "two.email  email  two/email  string  string_email_1b9c2  true",
  "two.profile  profile  two/profile  object  root_two_fn_output_profile_fn_output  true",
  "two.profile.email  email  two/profile/email  string  string_email_1b9c2  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_cbe33  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_cbe33  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_cbe33  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_cbe33  false",
]
`;

snapshot[`planner: dependencies in union/either 1`] = `
[
  "three  three  three  object  root_three_fn_output  false",
  "three.id  id  three/id  integer  integer_6d74d  false",
  "three.user  user  three/user  either  root_three_fn_output_user_either  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  root_one_fn_output_id_string_uuid  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  string_email_1b9c2  false",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  RegisteredUser_profile_fn_output  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  string_email_1b9c2  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  string_cbe33  false",
  "three.user\$RegisteredUser.profile.profilePic  profilePic  three/user\$RegisteredUser/profile/profilePic  string  string_cbe33  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  root_one_fn_output_id_string_uuid  false",
]
`;

snapshot[`planner: dependencies in union/either 2`] = `
[
  "three  three  three  object  root_three_fn_output  false",
  "three.id  id  three/id  integer  integer_6d74d  false",
  "three.user  user  three/user  either  root_three_fn_output_user_either  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  root_one_fn_output_id_string_uuid  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  string_email_1b9c2  true",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  RegisteredUser_profile_fn_output  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  string_email_1b9c2  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  string_cbe33  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  root_one_fn_output_id_string_uuid  false",
]
`;
